--- a/Section3_JS/exercise1.html
+++ b/Section3_JS/exercise1.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
+
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
-    <title>Section 1: Introduction - Exercise 1</title>
-    <style type ="text/css">
-        div.bar {
-            display: inline-block;
-            width: 20px;
+    
+	<meta charset="utf-8">
+
+	    <title>Section 1: Introduction - Exercise 1</title>
+
+	    <style type ="text/css">
+        
+		div.bar {
+
+			display: inline-block;
+width: 20px;
             height: 75px;
-            background-color: teal;
+
+background-color: teal;
             margin-right: 2px;
         }
     </style>
@@ -17,12 +25,11 @@
     <script type="text/javascript">
 
     function addNumbers(a, b){
-        //your code here!
+   return a+b
     }
 
     function multiplyNumbers(a, b){
-        //your code here!
-    }
+   return a*b   }
 
     if ((addNumbers(5, 5) == 10) && (multiplyNumbers(5,5) == 25)){
         var comment = "EXERCISE COMPLETED";
